# motiontracker

./: .gitignore  MANIFEST.in  MotionTracker.spec  README.md  classes.py  funcs.py  gui.py  pyproject.toml  requirements.txt  setup.py  test.py  tracker.py  widgets.py
src/: classes.py  funcs.py  gui.py  main.py  main_app.py  requirements.txt  widgets.py
src/MotionTrackerBeta/: __init__.py  main.py
src/MotionTrackerBeta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/MotionTrackerBeta/classes/: classes.py
src/MotionTrackerBeta/functions/: differentiate.py  display.py  helper.py  transforms.py
src/MotionTrackerBeta/style/: export.qss  filter-derivative.qss  main.qss  message.qss  postprocess.qss  rotation.qss  tracking.qss
src/MotionTrackerBeta/widgets/: dialogs.py  export.py  gui.py  lists.py  process.py  trackers.py  video.py
src/style/: export.qss  main.qss  message.qss  postprocess.qss  progress.qss  rotation.qss  tracking.qss
style/: export.qss  filter-derivative.qss  main.qss  postprocess.qss  progress.qss  rotation.qss  tracking.qss
