[tool.poetry]
name = "MotionTrackerBeta"
version = "0.1.7"
description = "a GUI based, open-source motion tracking application"
authors = ["Kristof Floch <kristof.floch@gmail.com>"]
maintainers = ["Kristof Floch <kristof.floch@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
        {include="MotionTrackerBeta", from="src"}
]

homepage = "https://github.com/flochkristof/motiontracker"
repository = "https://github.com/flochkristof/motiontracker"

classifiers=[
	'Development Status :: 4 - Beta',
	'Intended Audience :: Science/Research',
	'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',  
	'Operating System :: POSIX :: Linux',
	'Operating System :: Microsoft :: Windows :: Windows 10',
	'Operating System :: MacOS',
	'Topic :: Scientific/Engineering :: Image Processing', 
	'Programming Language :: Python :: 3.12'
    ]



[tool.poetry.dependencies]
python = "~3.12"
PyQt5 =">=5.15.9"
PyQt5-Qt5 = ">=5.15.2"
numpy = ">=1.26,<2"
matplotlib = ">=3.8"
scipy = ">=1.12"
opencv-contrib-python-headless = ">=4.5.5.64"
cvxopt = ">=1.3.2"
cvxpy = ">=1.4.0"
pandas = ">=2.0"
pynumdiff = ">=0.1.2"
tqdm = ">=4.60"
#pynumdiff = {git = "https://github.com/flochkristof/PyNumDiff.git"}
#pychebfun = {git = "https://github.com/flochkristof/pychebfun.git"}
openpyxl = ">=3.0.10"
Pillow = ">=10.0"

[tool.poetry.group.build.dependencies]
pyinstaller = ">=6.6.0"
setuptools = "<70"  # >=70 adds jaraco namespace packages that PyInstaller can't bundle

[tool.poetry.scripts]
motiontracker = "MotionTrackerBeta.main:MotionTracker"
MotionTrackerBeta = "MotionTrackerBeta.main:MotionTracker"
motiontrackerbeta = "MotionTrackerBeta.main:MotionTracker"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
